dependencies/daas/templates/dapi-ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dapi.local.chain.link
    http:
      paths:
      - backend:
          service:
            name: chainlink-daas-operator-resources-dapi
            port:
              number: 8888
        path: /
        pathType: Prefix
